--- a/caches/cn.html
+++ b/caches/cn.html
@@ -1,99 +1,77 @@
-<h2>Cesta náhonem</h2>
-<a
-	href="http://www.geocaching.com/seek/nearest.aspx?key=Cesta+nahonem&amp;submit4=Go"
-	style="margin: 0px; padding: 0px; font-style: inherit; font-family: inherit; vertical-align: baseline; color: rgb(0, 160, 175); border: 0px; outline: 0px;">Tato
-	série 4 kešek</a>
-je volným pokračováním série 9 kešek Stezky sovy Rozárky, která tudy
-oficiálně vede. Není tedy nutné vstupovat na soukromé pozemky (přes pole
-se může) ani chodit mimo cesty. Doporučujeme si prohlédnout
-<a href="http://www.sovazlutice.eu/ways/view/stezka-sovy-rozarky">tuto
-	stránku s mapkou, fotografiemi a dalšími informacemi</a>
-. Leták můžete získat i v infocentrech přilehlých měst.
-<br />
+<h2>Cesta náhonem</h2><a href=
+"http://www.geocaching.com/seek/nearest.aspx?key=Cesta+nahonem&amp;submit4=Go"
+style=
+"margin: 0px; padding: 0px; font-style: inherit; font-family: inherit; vertical-align: baseline; color: rgb(0, 160, 175); border: 0px; outline: 0px;">Tato
+série 4 kešek</a> je volným pokračováním série 9 kešek Stezky sovy Rozárky,
+která tudy oficiálně vede. Není tedy nutné vstupovat na soukromé pozemky (přes
+pole se může) ani chodit mimo cesty. Doporučujeme si prohlédnout <a href=
+"http://www.sovazlutice.eu/ways/view/stezka-sovy-rozarky">tuto stránku s
+mapkou, fotografiemi a dalšími informacemi</a> . Leták můžete získat i v
+infocentrech přilehlých měst.<br>
 Bonusová čísla z keší #1, #2 a #3 jsou nezbytná k nalezení bonusové keše
-<a
-	href="http://www.geocaching.com/geocache/GC584XV_cesta-nahonem-bonus-pro-dva">Cesta
-	nahonem #BONUS (pro dva)</a>
-, která byla vypuštěna 11.7.2014. Tato bonusová čísla nesouvisí s
-bonusovou keší Stezky sovy Rozárky.
-<br />
-Toto „rozdrobení“ pod jiný název bylo nutné z toho důvodu, že tato část
-je společná jak pro okešované
-<a href="http://coord.info/GC3VQB8"
-	style="margin: 0px; padding: 0px; font-style: inherit; font-family: inherit; vertical-align: baseline; color: rgb(0, 160, 175); border: 0px; outline: 0px;">Stezku
-	sovy Rozárky</a>
-, tak pro
-<a
-	href="http://www.geocaching.com/seek/nearest.aspx?key=Cesta+za+povesti&amp;submit4=Go">Cestu
-	za pověstí</a>
-. Více info o obou stezkách
-<a href="http://www.sovazlutice.eu/ways/">zde</a>
-<br />
-<br />
-<br />
-<h2>O stezce</h2>
-Kdysi dávno vedla cesta ze Žlutic směrem k Chýši podél řeky. Protože
-řeka vytváří ostré meandry, součástí cesty byly i brody. Po zhotovení
-silnice stará cesta zanikla a přerušil se tak přirozený přístup k
-Vladaři. Všeobecně se vědělo, že podél trati nelze dojít ke Strabovskému
-mlýnu, který se do dnešních dnů bohužel nedochoval. Jeho existenci nám
-dnes připomínají pouze zbytky náhonu. V roce 2012 se díky nadšencům ze
-Spolku okrašlovacího Vladař podařilo cestu zprůchodnit starým mlýnským
-náhonem. Ten nyní nabízí nejen trasu pro pěší, ale i nevšední duševní
-zážitek: tajemná atmosféra, prastaré stromy, křik ptáků, blízkost řeky a
-tratě, původní lužní louky... Cesta náhonem je součástí naučné Stezky
-sovy Rozárky a Cesty za pověstí. Proto se i tady setkáte s tabulemi, na
-které výtvarník Dalibor Nesnídal namaloval žlutické pověsti (zde
-konkrétně pověst o lesních žínkách a pověst o mlýně). Pro zpestření
-trasy a zároveň i jako orientační body jsou na těchto trasách umístěny
-dřevěné sochy sovy, mlynářské dcerky Andulky nebo vodníka.
-<br />
-<br />
-Chtěli bychom Vás ještě upozornit, že cesta, na které je keška umístěna,
-vede z části podél řeky, a tak může být v zimních měsících namrzlá.
-Zvažte tedy, jaké boty si na odlov obout.
-<br />
-<br />
-Přejeme Vám příjemnou cestu.
-<br />
-<br />
-<br />
-<br />
+<a href=
+"http://www.geocaching.com/geocache/GC584XV_cesta-nahonem-bonus-pro-dva">Cesta
+nahonem #BONUS (pro dva)</a> , která byla vypuštěna 11.7.2014. Tato bonusová
+čísla nesouvisí s bonusovou keší Stezky sovy Rozárky.<br>
+Toto „rozdrobení“ pod jiný název bylo nutné z toho důvodu, že tato část je
+společná jak pro okešované <a href="http://coord.info/GC3VQB8" style=
+"margin: 0px; padding: 0px; font-style: inherit; font-family: inherit; vertical-align: baseline; color: rgb(0, 160, 175); border: 0px; outline: 0px;">
+Stezku sovy Rozárky</a> , tak pro <a href=
+"http://www.geocaching.com/seek/nearest.aspx?key=Cesta+za+povesti&amp;submit4=Go">
+Cestu za pověstí</a> . Více info o obou stezkách <a href=
+"http://www.sovazlutice.eu/ways/">zde</a><br>
+<br>
+<br>
+
+<h2>O stezce</h2>Kdysi dávno vedla cesta ze Žlutic směrem k Chýši podél řeky.
+Protože řeka vytváří ostré meandry, součástí cesty byly i brody. Po zhotovení
+silnice stará cesta zanikla a přerušil se tak přirozený přístup k Vladaři.
+Všeobecně se vědělo, že podél trati nelze dojít ke Strabovskému mlýnu, který se
+do dnešních dnů bohužel nedochoval. Jeho existenci nám dnes připomínají pouze
+zbytky náhonu. V roce 2012 se díky nadšencům ze Spolku okrašlovacího Vladař
+podařilo cestu zprůchodnit starým mlýnským náhonem. Ten nyní nabízí nejen trasu
+pro pěší, ale i nevšední duševní zážitek: tajemná atmosféra, prastaré stromy,
+křik ptáků, blízkost řeky a tratě, původní lužní louky... Cesta náhonem je
+součástí naučné Stezky sovy Rozárky a Cesty za pověstí. Proto se i tady setkáte
+s tabulemi, na které výtvarník Dalibor Nesnídal namaloval žlutické pověsti (zde
+konkrétně pověst o lesních žínkách a pověst o mlýně). Pro zpestření trasy a
+zároveň i jako orientační body jsou na těchto trasách umístěny dřevěné sochy
+sovy, mlynářské dcerky Andulky nebo vodníka.<br>
+<br>
+Chtěli bychom Vás ještě upozornit, že cesta, na které je keška umístěna, vede z
+části podél řeky, a tak může být v zimních měsících namrzlá. Zvažte tedy, jaké
+boty si na odlov obout.<br>
+<br>
+Přejeme Vám příjemnou cestu.<br>
+<br>
+<br>
+<br>
 <b>--------------------------------------English
-	version-------------------------------------------------</b>
-<br />
-<br />
-These 4 caches are continuing of 9 caches of
-<a href="http://coord.info/GC3VQB8"
-	style="margin: 0px; padding: 0px; font-style: inherit; font-family: inherit; vertical-align: baseline; color: rgb(0, 160, 175); border: 0px; outline: 0px;">Stezka
-	sovy Rozárky</a>
-. Above you can find map, which you can also find in Zlutice's
-information centrum on the main square.
-<br />
-<br />
-Bonus numbers from these caches are necessary to find bonus cache. They
-aren't connected to bonus cache of
-<a href="http://coord.info/GC3VQB8"
-	style="margin: 0px; padding: 0px; font-style: inherit; font-family: inherit; vertical-align: baseline; color: rgb(0, 160, 175); border: 0px; outline: 0px;">Stezka
-	sovy Rozárky</a>
-(The trail of owl Rozarka).
-<br />
-<br />
-<h2>The trail by millrace</h2>
-A long time ago there was the road from Zlutice to Chyse next to the
-river. After building the aphalt road, the old way disappear. There were
-rumors, that next to the railway was old millrace for Strabovsky's mill
-and thanks to enthusiasm of local people from Organization for
-Conservation "Vladar" was this millrace opened up and now you can
-literaly go through it. Now it offers very remarkable not only
-pedestrian and mental experience: mysterious atmosphere, old trees,
-calls of birds, sparkling river and original floodplain meadows. Cesta
-nahonem (The trail by millrace) is component of the trail
-<a href="http://coord.info/GC3VQB8"
-	style="margin: 0px; padding: 0px; font-style: inherit; font-family: inherit; vertical-align: baseline; color: rgb(0, 160, 175); border: 0px; outline: 0px;">Stezka
-	sovy Rozárky</a>
-and Cesta za povesti (The trail of legend) and is decorated by wooden
-statues and extraordinary hand made boards by artist Dalibor Nesnídal
-with legends of this area.
-<br />
-<br />
+version-------------------------------------------------</b><br>
+<br>
+These 4 caches are continuing of 9 caches of <a href=
+"http://coord.info/GC3VQB8" style=
+"margin: 0px; padding: 0px; font-style: inherit; font-family: inherit; vertical-align: baseline; color: rgb(0, 160, 175); border: 0px; outline: 0px;">
+Stezka sovy Rozárky</a> . Above you can find map, which you can also find in
+Zlutice's information centrum on the main square.<br>
+<br>
+Bonus numbers from these caches are necessary to find bonus cache. They aren't
+connected to bonus cache of <a href="http://coord.info/GC3VQB8" style=
+"margin: 0px; padding: 0px; font-style: inherit; font-family: inherit; vertical-align: baseline; color: rgb(0, 160, 175); border: 0px; outline: 0px;">
+Stezka sovy Rozárky</a> (The trail of owl Rozarka).<br>
+<br>
+
+<h2>The trail by millrace</h2>A long time ago there was the road from Zlutice
+to Chyse next to the river. After building the aphalt road, the old way
+disappear. There were rumors, that next to the railway was old millrace for
+Strabovsky's mill and thanks to enthusiasm of local people from Organization
+for Conservation "Vladar" was this millrace opened up and now you can literaly
+go through it. Now it offers very remarkable not only pedestrian and mental
+experience: mysterious atmosphere, old trees, calls of birds, sparkling river
+and original floodplain meadows. Cesta nahonem (The trail by millrace) is
+component of the trail <a href="http://coord.info/GC3VQB8" style=
+"margin: 0px; padding: 0px; font-style: inherit; font-family: inherit; vertical-align: baseline; color: rgb(0, 160, 175); border: 0px; outline: 0px;">
+Stezka sovy Rozárky</a> and Cesta za povesti (The trail of legend) and is
+decorated by wooden statues and extraordinary hand made boards by artist
+Dalibor Nesnídal with legends of this area.<br>
+<br>
