readme, changes for logout...

--- a/caches/ssr.html
+++ b/caches/ssr.html
@@ -1,93 +1,75 @@
-Připravili jsme si pro Vás (společně s kačery Mišoň&amp;Mates - Stezka
-sovy Rozárky #1-#7) sérii kešek, které se nacházejí v blízké přírodě
-měst Žlutice, Hradský Dvůr, Kobylé a Záhořice. Od Záhořic na tuto sérii
-navazuje série dalších čtyř kešek
-<a href="http://coord.info/GC40QGM" target="_blank">Cesta náhonem #0
-	až #3</a>
-, která vás dovede zpět na začátek Stezky sovy Rozárky a uzavírá tak
-celý okruh.
-<br />
-<br />
-Tato série kopíruje stezku sovy Rozárky, která vznikla v roce 2011. O
-stezce se můžete dozvědět na stránkách
-<a href="http://www.sovazlutice.eu/ways/view/stezka-sovy-rozarky"><b>Okrašlovacího
-		spolku Vladař</b></a>
-. Tam kromě
-<b>oficiálních letáčků s mapkou a popisem trasy</b>
-také naleznete fotografie a zajímavosti, které na stezce můžete potkat.
-<br />
-Celá stezka měří přibližně 6-7km (i s návratem do Žlutic) a je určena
-především dětem. Vede i místy, kde byla dříve nepropustná houšť a proto
-je naším záměrem přilákat do těchto končin kačery, kteří stezku řádně
-prošlápnou a pomohou s její schůdností a návštěvností.
-<br />
-<br />
-Oficiální start stezky je na žlutickém náměstí. Cesta dále pokračuje do
-čtvrti Lomnice, kde se nachází první tabule s mapou, dále pokračujeme do
-kopce směrem na Hradský dvůr - zde krásné výhledy do širokého okolí. Po
-silnici do údolí, přes potok a kolem sochy vodníka do tajemné rokle. Nad
-roklí je možné odbočit na odpočívku s vyhlídkou (50m) nebo pokračovat
-dále až na Babiččin dvoreček v Kobylé (1km). Od rokle dále lesem ke
-křížku u železniční zastávky Záhořice. Zpět do Žlutic kolem řeky Střely,
-částečně bývalým náhonem, kde na vás čekají další kešky ze série
-<a href="http://coord.info/GC40QGM" target="_blank">Cesta náhonem</a>
-.
-<br />
-<br />
-<h4>Pár rad a tipů k sérii:</h4>
-<br />
-- Jdi po této značce
-<img
-	src="http://img.geocaching.com/cache/large/a516dd2d-c1f8-42ae-90eb-cd0e0732ec72.jpg" />
-<br />
-- zaparkovat můžete na níže zmíněných souřadnicích (viz. waypointy).
-Místa je zde dost pro všechny
-<br />
-- atributy se vážou k jednotlivým místům - respektujte je
-<br />
-- v blízkosti každé tabule hledej kešku a ZAPIŠ SI BONUSOVÉ ČÍSLO
-<br />
-- nespěchej a kochej se přírodou a okolím
-<br />
-- nenič okolí ani jednotlivé schránky
-<br />
-- v případě nepřesného zaměření nebo geoslepoty použij hint
-<br />
-- nevkládej jiné předměty než ty sloužící k výměně
-<br />
-- vezmi si raději s sebou vlastní tužku
-<br />
-- pokud nemáš stále dost, můžeš si projít další novou okeškovanou stezku
-–
-<a href="http://www.sovazlutice.eu/ways/view/cesta-za-povesti">Cesta
-	za pověstí</a>
-. Pro cykloturisty je v okolí tzv.
-<a href="http://www.sovazlutice.eu/ways/view/krizkova-cesta">Křížková
-	cesta (cca 20km)</a>
-<br />
-- jakékoliv poškození krabiček či jejich ztrátu hlaš ve svém logu
-<br />
-- celá série i s bonusem bude na zimu archivována
-<br />
-- vezmi si dobré a pevné boty (cesta může být podmáčená)
-<br />
-<br />
-<p style="text-align: center;">
-	<img src="http://img191.imageshack.us/img191/6766/cwgrozra.png" /><br />
-	<b>Série "Stezka sovy Rozárky"</b><br /> <br /> <a
-		href="http://coord.info/GC3VQB8" target="_blank">Stezka sovy
-		Rozárky #1</a><br /> <a href="http://coord.info/GC3VYHT" target="_blank">Stezka
-		sovy Rozárky #2</a><br /> <a href="http://coord.info/GC3VYJ5"
-		target="_blank">Stezka sovy Rozárky #3</a><br /> <a
-		href="http://coord.info/GC3VYMR" target="_blank">Stezka sovy
-		Rozárky #4</a><br /> <a href="http://coord.info/GC3VYMT" target="_blank">Stezka
-		sovy Rozárky #5</a><br /> <a href="http://coord.info/GC3VYMV"
-		target="_blank">Stezka sovy Rozárky #6</a><br /> <a
-		href="http://coord.info/GC3VYMW" target="_blank">Stezka sovy
-		Rozárky #7</a><br /> <a href="http://coord.info/GC3YJME" target="_blank">Stezka
-		sovy Rozárky #8</a><br /> <a href="http://coord.info/GC3YJN6"
-		target="_blank">Stezka sovy Rozárky #9</a><br /> <a
-		href="http://coord.info/GC4NM16" target="_blank">Stezka sovy
-		Rozárky #BONUS</a>
-</p>
-<br />
+Připravili jsme si pro Vás (společně s kačery Mišoň&amp;Mates - Stezka sovy
+Rozárky #1-#7) sérii kešek, které se nacházejí v blízké přírodě měst Žlutice,
+Hradský Dvůr, Kobylé a Záhořice. Od Záhořic na tuto sérii navazuje série
+dalších čtyř kešek <a href="http://coord.info/GC40QGM" target="_blank">Cesta
+náhonem #0 až #3</a> , která vás dovede zpět na začátek Stezky sovy Rozárky a
+uzavírá tak celý okruh.<br>
+<br>
+Tato série kopíruje stezku sovy Rozárky, která vznikla v roce 2011. O stezce se
+můžete dozvědět na stránkách <a href=
+"http://www.sovazlutice.eu/ways/view/stezka-sovy-rozarky" style=
+"font-weight: bold">Okrašlovacího spolku Vladař</a> . Tam kromě <b>oficiálních
+letáčků s mapkou a popisem trasy</b> můžete nahlédnout fotografie a zjistit další 
+zajímavosti o stezce.<br>
+Celá stezka měří přibližně 6-7km (i s návratem do Žlutic) a je určena především
+dětem. Vede i místy, kde byla dříve nepropustná houšť a proto je naším záměrem
+přilákat do těchto končin kačery, kteří stezku řádně prošlápnou a pomohou s
+její schůdností a návštěvností.<br>
+<br>
+Oficiální start stezky je na žlutickém náměstí. Cesta dále pokračuje do čtvrti
+Lomnice, kde se nachází první tabule s mapou, dále pokračuje do kopce směrem
+na Hradský dvůr (zde jsou krásné výhledy do širokého okolí). Po silnici do údolí,
+přes potok a kolem sochy vodníka do tajemné rokle. Nad roklí je možné odbočit
+na odpočívku s vyhlídkou (50m) nebo pokračovat dále až na Babiččin dvoreček v
+Kobylé (1km). Od rokle dále lesem ke křížku u železniční zastávky Záhořice.
+Zpět do Žlutic kolem řeky Střely, částečně bývalým náhonem, kde na vás čekají
+další kešky ze série <a href="http://coord.info/GC40QGM" target="_blank">Cesta
+náhonem</a> .<br>
+<br>
+
+<h4>Pár rad a tipů k sérii:</h4><br>
+- Jdi po této značce <img src=
+"http://img.geocaching.com/cache/large/a516dd2d-c1f8-42ae-90eb-cd0e0732ec72.jpg"><br>
+- zaparkovat můžete na níže zmíněných souřadnicích (viz. waypointy). Místa je
+zde dost pro všechny<br>
+- atributy se vážou k jednotlivým místům - respektujte je<br>
+- v blízkosti každé tabule hledej kešku a ZAPIŠ SI BONUSOVÉ ČÍSLO<br>
+- nespěchej a kochej se přírodou a okolím<br>
+- nenič okolí ani jednotlivé schránky<br>
+- v případě nepřesného zaměření nebo geoslepoty použij hint<br>
+- nevkládej jiné předměty než ty sloužící k výměně<br>
+- vezmi si raději s sebou vlastní tužku<br>
+- pokud nemáš stále dost, můžeš si projít další novou okeškovanou stezku –
+<a href="http://www.sovazlutice.eu/ways/view/cesta-za-povesti">Cesta za
+pověstí</a> . Pro cykloturisty je v okolí tzv. <a href=
+"http://www.sovazlutice.eu/ways/view/krizkova-cesta">Křížková cesta (cca
+20km)</a><br>
+- jakékoliv poškození krabiček či jejich ztrátu hlaš ve svém logu<br>
+- celá série i s bonusem bude na zimu archivována<br>
+- vezmi si dobré a pevné boty (cesta může být podmáčená)<br>
+<br>
+
+<p style="text-align: center;"><img src=
+"http://img191.imageshack.us/img191/6766/cwgrozra.png"><br>
+<b>Série "Stezka sovy Rozárky"</b><br>
+<br>
+<a href="http://coord.info/GC3VQB8" target="_blank">Stezka sovy Rozárky
+#1</a><br>
+<a href="http://coord.info/GC3VYHT" target="_blank">Stezka sovy Rozárky
+#2</a><br>
+<a href="http://coord.info/GC3VYJ5" target="_blank">Stezka sovy Rozárky
+#3</a><br>
+<a href="http://coord.info/GC3VYMR" target="_blank">Stezka sovy Rozárky
+#4</a><br>
+<a href="http://coord.info/GC3VYMT" target="_blank">Stezka sovy Rozárky
+#5</a><br>
+<a href="http://coord.info/GC3VYMV" target="_blank">Stezka sovy Rozárky
+#6</a><br>
+<a href="http://coord.info/GC3VYMW" target="_blank">Stezka sovy Rozárky
+#7</a><br>
+<a href="http://coord.info/GC3YJME" target="_blank">Stezka sovy Rozárky
+#8</a><br>
+<a href="http://coord.info/GC3YJN6" target="_blank">Stezka sovy Rozárky
+#9</a><br>
+<a href="http://coord.info/GC4NM16" target="_blank">Stezka sovy Rozárky
+#BONUS</a></p><br>
