Fixes body error bug

--- a/texttoinclude.html
+++ b/texttoinclude.html
@@ -1,5 +1,19 @@
-=^.^= ƸӜƷ
 
-*¨)
-..*¨) .*¨)
-(. (.` ¤ Mayus & María ¤
+Après un premier teasing officiel lors de la sortie inaugurale la série Cannoise de Daouden92 et un plus officieux (on n'a rien vu, rien entendu lors du LGN au Paradisio). La veille du jour J, prévenus de la sortie imminente mais souhaitant tout de même dormir un peu et ne pas être réveillés en fanfare par une volée de notifications, nous éteignons le smartphone. Belle nuit et levé à 8h, consultation des emails, rien ? Bizarre... 
+Le temps de sortir le bol de lait et hop 8h15 c'est parti !!! Le vibreur du téléphone donne tout ce qu'il a pendant de longues minutes (triples notifications, entre le IFTTT, les SMS et les emails au moins nous sommes sûr de rien rater !). 
+
+On regarde le parcours qui s'annonce tout en espérant une bonne série de FTF à proximité de chez nous. Bizarre, une nouvelle fois il y a un trou dans la raquette, la série ne semble pas complètement publiée. Une vingtaine de minutes plus tard, c'est reparti voilà le reste :D 
+
+Première hésitation sur la stratégie à adopter, une ou deux voitures ? Quel parking ? Qui d'autre sur le coup dans le coin ? Un petit message sympa de VSV06 nous conseille le vallon de Nans, très bien nous ne connaissons pas ce coin. Direction le col du Ferrier avec chacun notre voiture. Une première cache rapidement trouvée pour vérifier que nous sommes FTF et c'est parti direction le col suivant. En arrivant au col de la Sine, le doute s'installe. Une voiture est déjà garée là, mais étrangement pas de TB dessus et ce n’est pas un modèle que nous reconnaissons. Verdict quelques minutes après, c'est Poïk qui est déjà passé par là. Zut, on ne va quand même pas faire ce que nous avions prévu en deuxième place, pas ce matin ! Finalement le hasard fait bien les choses, Poïk ayant décidé d'entamer le VSV en direction de Cipières. 
+
+C'est ainsi que nous récoltons avec plaisir notre première série de FTF en masse. En plus c'est une très belle surprise la découverte de ce vallon de Nans. Magnifique endroit avec de splendides très vieux arbres ! La descente jusqu'au col du Ferrier se passe tranquillement, quand soudain la pluie s'invite. Et deuxième surprise dans la foulée, notre ami Poïk vient à notre rencontre. Nous finirons la fin de ce tronçon ensemble, chacun rassasiés par nos FTF respectifs et le froid nous incitant pas à continuer pour aujourd'hui.
+
+Quelle belle surprise pour un premier avril ! Le parcours s'annonce à la hauteur du nombre de caches posée par ces quatres géocacheurs maintenant bien connus dans la région.
+
+Merci à vous ;-)
+
+=^.^= Ƹ̵̡Ӝ̵̨̄Ʒ
+
+*´¨)
+¸.•´¸.•*´¨) ¸.•*¨)
+(¸.•´ (¸.•` ¤ Mayus & María ¤
